Remove my email

--- a/_includes/sections/rsvp.html
+++ b/_includes/sections/rsvp.html
@@ -2,7 +2,7 @@
   <header class="major">
     <h2>RSVP</h2>
 
-	<form method="POST" action="http://formspree.io/mark2288@gmail.com">
+	<form method="POST" action="http://formspree.io/YourEmail@YourEmailProvider.com">
 	  <input type="text" name="name" placeholder="Your name" style="background: #d5f0fb"/>
 	  <input style="background: #d5f0fb; margin-top: 4px" type="text" name="email" placeholder="Your email"/>
 	  <textarea name="message" placeholder="Let us know if you can come and who's coming!" style="background: #d5f0fb; margin-top: 4px"></textarea>
