--- a/_includes/sections/hashtag.html
+++ b/_includes/sections/hashtag.html
@@ -2,7 +2,7 @@
   <header class="major">
     <h2>RSVP</h2>
 
-	<form method="POST" action="http://formspree.io/mark2288@gmail.com">
+	<form method="POST" action="http://formspree.io/YourEmail@YourEmailProvider.com">
 	  <input type="text" name="name" placeholder="Your name" style="background: #ffdfe5"/>
 	  <textarea name="message" placeholder="Your message" style="background: #ffdfe5; margin-top: 4px"></textarea>
 	  <input type="text" name="_gotcha" style="display:none"/>
