Change references to ross+des. Change rsvp to use enformed

--- a/_includes/sections/details.html
+++ b/_includes/sections/details.html
@@ -1,7 +1,7 @@
 <div class="inner">
   <header class="major">
     <h2>Come celebrate with us!</h2>
-    <p>November 11, 2018</p>
+    <p>20th January 2020</p>
 	
 	<p>Wedgewood Weddings San Ramon<br>
 	9430 Fircrest Lane<br>
