--- a/_includes/sections/rsvp.html
+++ b/_includes/sections/rsvp.html
@@ -2,11 +2,11 @@
   <header class="major">
     <h2>RSVP</h2>
 
-	<form method="POST" action="http://formspree.io/YourEmail@YourEmailProvider.com">
+	<form method="POST" action="https://www.enformed.io/tq3qg8s1">
+		<input type="hidden" name="*formname" value="wedding-rsvp" />
 	  <input type="text" name="name" placeholder="Your name" style="background: #d5f0fb"/>
 	  <input style="background: #d5f0fb; margin-top: 4px" type="text" name="email" placeholder="Your email"/>
 	  <textarea name="message" placeholder="Let us know if you can come and who's coming!" style="background: #d5f0fb; margin-top: 4px"></textarea>
-	  <input type="text" name="_gotcha" style="display:none"/>
 	  <br>
 	  <button type="submit" style="background: #d5f0fb">RSVP</button>
 	</form>
