Working on Cloudfront with edge lambda for authentication

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,16 +4,16 @@
   <nav id="nav">
     <ul>
       <li class="special">
-        <a href="#menu" class="menuToggle"><span>Menu</span></a>
+        <a href="/logout.html"><span>Log out</span></a>
+        <!-- <a href="#menu" class="menuToggle"><span>Menu</span></a>
         <div id="menu">
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="#details" class="more scrolly">Details</a></li>
             <li><a href="#couple" class="more scrolly">The Couple</a></li>
             <li><a href="#rsvp" class="more scrolly">RSVP</a></li>
-            <!-- <li><a href="#registry" class="more scrolly">Registry</a></li> -->
           </ul>
-        </div>
+        </div> -->
       </li>
     </ul>
   </nav>
